--- a/MobileBankingApp/res/layout/account_operation.xml
+++ b/MobileBankingApp/res/layout/account_operation.xml
@@ -11,7 +11,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="110dp"
         android:layout_marginTop="43dp"
-        android:text="Deposit" />
+        android:text="Transfer" />
 
     <Button
         android:id="@+id/withdraw_button"
